# boxworld

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md
data/levels/: dead_end.json  dead_ends.txt  door_key.json  door_key.txt  four_rooms.json  key_lava_gauntlet.txt  key_puzzle.json  lava_crossing.json  lava_crossing.txt  lava_maze.json  open_room.json  open_room.txt  open_shortcut.txt  simple_corridor.json  simple_corridor.txt  three_keys.txt  two_keys.txt  two_rooms.json  two_rooms.txt  zigzag_lava.txt
docs/: 2026-02-05_Agent Autopsy RL Visualization Spec.md  2026-02-06_Boxworld episode recording and ONNX inference fixes.md  2026-02-06_Boxworld implementation task plan.md  2026-02-06_DQN training research MiniGrid best practices.md  2026-02-06_E2E level-solving test and training iteration.md  2026-02-06_Training improvements plan.md  2026-02-07_CustomMaterial shader component.md  2026-02-07_Overlay UI with recordings and inference tabs.md  2026-02-09_GPU rental options for RL training.md  2026-02-09_Holdout level generalization test.md  2026-02-10_Training marathon recording fixes.md
training/: curate.py  curriculum.py  environment.py  export.py  level_parser.py  main.py  pyproject.toml  record.py  test_per_generator.py  train.py
training/scripts/: episode-count.sh
training/tests/: test_bugs.py  test_curate.py  test_e2e.py  test_environment.py  test_export.py  test_generalization.py  test_level_parser.py  test_record.py  test_train.py
visualize/: .gitignore  package-lock.json  package.json  playwright.config.ts  tsconfig.json
visualize/src/: db.ts  (+15 more)
(+21 files in other folders)
