[project]
name = "boxworld"
version = "0.1.0"
description = "Boxworld RL training environment"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium>=1.2.3",
    "onnx>=1.20.1",
    "onnxruntime>=1.24.1",
    "onnxscript>=0.6.0",
    "stable-baselines3>=2.7.1",
    "torch>=2.10.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
